--- a/main.bib
+++ b/main.bib
@@ -1,566 +1,562 @@
 @article{raymond1999cathedral,
-  title={{The Cathedral and the Bazaar}},
-  author={Raymond, Eric},
-  journal={Knowledge, Technology \& Policy},
-  volume={12},
-  number={3},
-  pages={23--49},
-  year={1999},
-  publisher={Springer}
+  author = {Raymond, Eric},
+  journal = {{Knowledge, Technology \& Policy}},
+  number = {3},
+  pages = {23--49},
+  publisher = {Springer},
+  title = {{The Cathedral and the Bazaar}},
+  volume = {12},
+  year = {1999},
 }
 
 @book{fogel2005producing,
-  title={{Producing Open Source Software: How to Run a Successful Free Software Project}},
-  author={Fogel, Karl},
-  year={2005},
-  publisher={O'Reilly Media, Inc.}
+  author = {Fogel, Karl},
+  publisher = {O'Reilly Media, Inc.},
+  title = {{Producing Open Source Software: How to Run a Successful Free Software Project}},
+  year = {2005},
 }
 
 @article{pope2014,
-  author={Winfield, Nicole},
-  title={{Pope's Advice to Couples: Say `Please, Thanks and Sorry'}},
-  journal={New York Post},
-  month={2},
-  year={2014}
+  author = {Winfield, Nicole},
+  journal = {{New York Post}},
+  month = {feb},
+  title = {{Pope's Advice to Couples: Say `Please, Thanks and Sorry'}},
+  year = {2014},
 }
 
 @article{nowak2005influence,
-  title={{The Influence of the Avatar on Online Perceptions of Anthropomorphism, Androgyny, Credibility, Homophily, and Attraction}},
-  author={Nowak, Kristine L. and Rauh, Christian},
-  journal={Journal of Computer-Mediated Communication},
-  volume={11},
-  number={1},
-  pages={153--178},
-  year={2005},
-  publisher={Oxford University Press Oxford, UK}
+  author = {Nowak, Kristine L. and Rauh, Christian},
+  journal = {{Journal of Computer-Mediated Communication}},
+  number = {1},
+  pages = {153--178},
+  publisher = {Oxford University Press Oxford, UK},
+  title = {{The Influence of the Avatar on Online Perceptions of Anthropomorphism, Androgyny, Credibility, Homophily, and Attraction}},
+  volume = {11},
+  year = {2005},
 }
 
-@techreport{laurentsyeva2019friends,
-  title={{From Friends to Foes: National Identity and Collaboration in Diverse Teams}},
-  author={Laurentsyeva, Nadzeya},
-  year={2019},
-  institution={Ludwig-Maximilians-Universit{\"a}t M{\"u}nchen und Humboldt-Universit{\"a}t zu Berlin}
+@misc{laurentsyeva2019friends,
+  author = {Laurentsyeva, Nadzeya},
+  title = {{From Friends to Foes: National Identity and Collaboration in Diverse Teams}},
+  year = {2019},
 }
 
 @inproceedings{fackler2020gravity,
-  title={{Gravity in Online Collaborations: Evidence from Github}},
-  author={Fackler, Thomas and Laurentsyeva, Nadzeya},
-  booktitle={{CESifo Forum}},
-  volume={21},
-  number={03},
-  pages={15--20},
-  year={2020},
+  author = {Fackler, Thomas and Laurentsyeva, Nadzeya},
+  booktitle = {{Proceedings of the CESifo Forum}},
+  pages = {15--20},
+  title = {{Gravity in Online Collaborations: Evidence From Github}},
+  volume = {21},
+  year = {2020},
 }
 
 @inproceedings{tsay2014let,
-  title={{Let's Talk About It: Evaluating Contributions Through Discussion in GitHub}},
-  author={Tsay, Jason and Dabbish, Laura and Herbsleb, James},
-  booktitle={{Proceedings of the 22nd International Symposium on Foundations of Software Engineering}},
-  pages={144--154},
-  year={2014}
+  author = {Tsay, Jason and Dabbish, Laura and Herbsleb, James},
+  booktitle = {{Proceedings of the 22nd International Symposium on Foundations of Software Engineering}},
+  pages = {144--154},
+  title = {{Let's Talk About It: Evaluating Contributions Through Discussion in GitHub}},
+  year = {2014},
 }
 
 @article{terrell2017gender,
-  title={{Gender Differences and Bias in Open Source: Pull Request Acceptance of Women Versus Men}},
-  author={Terrell, Josh and Kofink, Andrew and Middleton, Justin and Rainear, Clarissa and Murphy-Hill, Emerson and Parnin, Chris and Stallings, Jon},
-  journal={{PeerJ Computer Science}},
-  volume={3},
-  pages={e111},
-  year={2017},
-  publisher={PeerJ Inc.}
+  author = {Terrell, Josh and Kofink, Andrew and Middleton, Justin and Rainear, Clarissa and Murphy-Hill, Emerson and Parnin, Chris and Stallings, Jon},
+  journal = {{PeerJ Computer Science}},
+  pages = {e111},
+  publisher = {PeerJ Inc.},
+  title = {{Gender Differences and Bias in Open Source: Pull Request Acceptance of Women Versus Men}},
+  volume = {3},
+  year = {2017},
 }
 
 @inproceedings{imtiaz2019investigating,
-  title={{Investigating the Effects of Gender Bias on GitHub}},
-  author={Imtiaz, Nasif and Middleton, Justin and Chakraborty, Joymallya and Robson, Neill and Bai, Gina and Murphy-Hill, Emerson},
-  booktitle={{Proceedings of the 41st International Conference on Software Engineering (ICSE)}},
-  pages={700--711},
-  year={2019},
-  organization={IEEE}
+  author = {Imtiaz, Nasif and Middleton, Justin and Chakraborty, Joymallya and Robson, Neill and Bai, Gina and Murphy-Hill, Emerson},
+  booktitle = {{Proceedings of the 41st International Conference on Software Engineering (ICSE)}},
+  organization = {IEEE},
+  pages = {700--711},
+  title = {{Investigating the Effects of Gender Bias on GitHub}},
+  year = {2019},
 }
 
 @article{nadri2021insights,
-  title={{Insights into Nonmerged Pull Requests in GitHub: Is There Evidence of Bias Based on Perceptible Race?}},
-  author={Nadri, Reza and Rodriguez-Perez, Gema and Nagappan, Meiyappan},
-  journal={IEEE Software},
-  volume={38},
-  number={2},
-  pages={51--57},
-  year={2021}
+  author = {Nadri, Reza and Rodriguez-Perez, Gema and Nagappan, Meiyappan},
+  journal = {{IEEE Software}},
+  number = {2},
+  pages = {51--57},
+  title = {{Insights into Nonmerged Pull Requests in GitHub: Is There Evidence of Bias Based on Perceptible Race?}},
+  volume = {38},
+  year = {2021},
 }
 
 @inproceedings{egelman2020predicting,
-  title={{Predicting Developers' Negative Feelings About Code Review}},
-  author={Egelman, Carolyn D. and Murphy-Hill, Emerson and Kammer, Elizabeth and Hodges, Margaret Morrow and Green, Collin and Jaspan, Ciera and Lin, James},
-  booktitle={{Proceedings of the 42nd International Conference on Software Engineering}},
-  pages={174--185},
-  year={2020}
+  author = {Egelman, Carolyn D. and Murphy-Hill, Emerson and Kammer, Elizabeth and Hodges, Margaret Morrow and Green, Collin and Jaspan, Ciera and Lin, James},
+  booktitle = {{Proceedings of the 42nd International Conference on Software Engineering}},
+  pages = {174--185},
+  title = {{Predicting Developers' Negative Feelings About Code Review}},
+  year = {2020},
 }
 
 @inproceedings{middleton2018contributions,
-  title={{Which Contributions Predict Whether Developers Are Accepted into Github Teams}},
-  author={Middleton, Justin and Murphy-Hill, Emerson and Green, Demetrius and Meade, Adam and Mayer, Roger and White, David and McDonald, Steve},
-  booktitle={{Proceedings of the 15th International Conference on Mining Software Repositories}},
-  pages={403--413},
-  year={2018}
+  author = {Middleton, Justin and Murphy-Hill, Emerson and Green, Demetrius and Meade, Adam and Mayer, Roger and White, David and McDonald, Steve},
+  booktitle = {{Proceedings of the 15th International Conference on Mining Software Repositories}},
+  pages = {403--413},
+  title = {{Which Contributions Predict Whether Developers Are Accepted into Github Teams}},
+  year = {2018},
 }
 
 @inproceedings{miller2022did,
-  title={{``Did You Miss My Comment or What?'' understanding toxicity in open source discussions}},
-  author={Miller, Courtney and Cohen, Sophie and Klug, Daniel and Vasilescu, Bogdan and KaUstner, Christian},
-  booktitle={{Proceedings of the 44th International Conference on Software Engineering}},
-  pages={710--722},
-  year={2022}
+  author = {Miller, Courtney and Cohen, Sophie and Klug, Daniel and Vasilescu, Bogdan and KaUstner, Christian},
+  booktitle = {{Proceedings of the 44th International Conference on Software Engineering}},
+  pages = {710--722},
+  title = {{``Did You Miss My Comment or What?'' Understanding Toxicity in Open Source Discussions}},
+  year = {2022},
 }
 
 @article{lu2022emojis,
-  title={{Emojis Predict Dropouts of Remote Workers: An Empirical Study of Emoji Usage on GitHub}},
-  author={Lu, Xuan and Ai, Wei and Chen, Zhenpeng and Cao, Yanbin and Mei, Qiaozhu},
-  journal={{PLOS One}},
-  volume={17},
-  number={1},
-  year={2022},
+  author = {Lu, Xuan and Ai, Wei and Chen, Zhenpeng and Cao, Yanbin and Mei, Qiaozhu},
+  journal = {{PLOS One}},
+  number = {1},
+  title = {{Emojis Predict Dropouts of Remote Workers: An Empirical Study of Emoji Usage on GitHub}},
+  volume = {17},
+  year = {2022},
 }
 
 @article{mytton2016,
-  author={Mytton, David},
-  title={{What's the real reason Microsoft and Google are releasing open source?}},
-  journal={InfoWorld},
-  month={2},
-  year={2016},
+  author = {Mytton, David},
+  journal = {{InfoWorld}},
+  month = {feb},
+  title = {{What's the Real Reason Microsoft and Google Are Releasing Open Source?}},
+  year = {2016},
 }
 
 @inproceedings{raman2020stress,
-  title={{Stress and Burnout in Open Source: Toward Finding, Understanding, and Mitigating Unhealthy Interactions}},
-  author={Raman, Naveen and Cao, Minxuan and Tsvetkov, Yulia and K{\"a}stner, Christian and Vasilescu, Bogdan},
-  booktitle={{Proceedings of the 42nd International Conference on Software Engineering: New Ideas and Emerging Results}},
-  pages={57--60},
-  year={2020}
+  author = {Raman, Naveen and Cao, Minxuan and Tsvetkov, Yulia and K{\"a}stner, Christian and Vasilescu, Bogdan},
+  booktitle = {{Proceedings of the 42nd International Conference on Software Engineering: New Ideas and Emerging Results}},
+  pages = {57--60},
+  title = {{Stress and Burnout in Open Source: Toward Finding, Understanding, and Mitigating Unhealthy Interactions}},
+  year = {2020},
 }
 
 @article{li2021code,
-  title={{Code of Conduct Conversations in Open Source Software Projects on Github}},
-  author={Li, Renee and Pandurangan, Pavitthra and Frluckaj, Hana and Dabbish, Laura},
-  journal={{Proceedings of the ACM on Human-Computer Interaction}},
-  volume={5},
-  number={CSCW1},
-  pages={1--31},
-  year={2021},
-  publisher={ACM}
+  author = {Li, Renee and Pandurangan, Pavitthra and Frluckaj, Hana and Dabbish, Laura},
+  journal = {{Proceedings of the ACM on Human-Computer Interaction}},
+  number = {CSCW1},
+  pages = {1--31},
+  publisher = {ACM},
+  title = {{Code of Conduct Conversations in Open Source Software Projects on Github}},
+  volume = {5},
+  year = {2021},
 }
 
 @inproceedings{jamieson2023predicting,
-  title={{Predicting Open Source Contributor Turnover from Value-Related Discussions: An Analysis of GitHub Issues}},
-  author={Jamieson, Jack and Yamashita, Naomi and Foong, Eureka},
-  booktitle={{Proceedings of the 46th International Conference on Software Engineering}},
-  pages={667--679},
-  year={2023},
-  organization={IEEE Computer Society}
+  author = {Jamieson, Jack and Yamashita, Naomi and Foong, Eureka},
+  booktitle = {{Proceedings of the 46th International Conference on Software Engineering}},
+  organization = {IEEE},
+  pages = {667--679},
+  title = {{Predicting Open Source Contributor Turnover From Value-Related Discussions: An Analysis of GitHub Issues}},
+  year = {2023},
 }
 
 @article{ferreira2021shut,
-  title={{The ``Shut the f** k up'' Phenomenon: Characterizing Incivility in Open Source Code Review Discussions}},
-  author={Ferreira, Isabella and Cheng, Jinghui and Adams, Bram},
-  journal={{Proceedings of the ACM on Human-Computer Interaction}},
-  volume={5},
-  number={CSCW2},
-  pages={1--35},
-  year={2021},
-  publisher={ACM}
+  author = {Ferreira, Isabella and Cheng, Jinghui and Adams, Bram},
+  journal = {{Proceedings of the ACM on Human-Computer Interaction}},
+  number = {CSCW2},
+  pages = {1--35},
+  publisher = {ACM},
+  title = {{The ``Shut the F** K Up'' Phenomenon: Characterizing Incivility in Open Source Code Review Discussions}},
+  volume = {5},
+  year = {2021},
 }
 
 @article{warschauer1995comparing,
-  title={{Comparing Face-to-Face and Electronic Discussion in the Second Language Classroom}},
-  author={Warschauer, Mark},
-  journal={{CALICO Journal}},
-  pages={7--26},
-  year={1995},
-  publisher={JSTOR}
+  author = {Warschauer, Mark},
+  journal = {{CALICO Journal}},
+  pages = {26--7},
+  publisher = {JSTOR},
+  title = {{Comparing Face-To-Face and Electronic Discussion in the Second Language Classroom}},
+  year = {1995},
 }
 
 @inproceedings{ebert2022communication,
-  title={{How Are Communication Channels on GitHub Presented to Their Intended Audience?---A Thematic Analysis}},
-  author={Ebert, Verena and Graziotin, Daniel and Wagner, Stefan},
-  booktitle={Proceedings of the 26th International Conference on Evaluation and Assessment in Software Engineering},
-  pages={40--49},
-  year={2022}
+  author = {Ebert, Verena and Graziotin, Daniel and Wagner, Stefan},
+  booktitle = {{Proceedings of the 26th International Conference on Evaluation and Assessment in Software Engineering}},
+  pages = {40--49},
+  title = {{How Are Communication Channels on GitHub Presented to Their Intended Audience?---A Thematic Analysis}},
+  year = {2022},
 }
 
 @book{hetzel1993complete,
-  title={{The Complete Guide to Software Testing}},
-  author={Hetzel, Bill},
-  year={1993},
-  publisher={A Wiley-QED Publication},
-  edition={2nd}
+  author = {Hetzel, Bill},
+  publisher = {A Wiley-QED Publication},
+  title = {{The Complete Guide to Software Testing}},
+  year = {1993},
 }
 
 @book{myers2012art,
-  title={{The Art of Software Testing}},
-  author={Myers, Glenford J. and Badgett, Tom and Thomas, Todd M. and Sandler, Corey},
-  edition={3rd},
-  year={2004},
-  publisher={Wiley Online Library}
+  author = {Myers, Glenford J. and Badgett, Tom and Thomas, Todd M. and Sandler, Corey},
+  publisher = {Wiley Online Library},
+  title = {{The Art of Software Testing}},
+  year = {2004},
 }
 
 @misc{spolsky2000bugs,
   author = {Spolsky, Joel},
-  title = {{Painless Bug Tracking}},
   howpublished = {\url{https://www.joelonsoftware.com/2000/11/08/painless-bug-tracking/}},
+  month = {nov},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Painless Bug Tracking}},
   year = {2000},
-  month={November},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @inproceedings{bettenburg2008makes,
-  title={{What Makes a Good Bug Report?}},
-  author={Bettenburg, Nicolas and Just, Sascha and Schr{\"o}ter, Adrian and Weiss, Cathrin and Premraj, Rahul and Zimmermann, Thomas},
-  booktitle={{Proceedings of the 16th International Symposium on Foundations of Software Engineering}},
-  pages={308--318},
-  year={2008}
+  author = {Bettenburg, Nicolas and Just, Sascha and Schr{\"o}ter, Adrian and Weiss, Cathrin and Premraj, Rahul and Zimmermann, Thomas},
+  booktitle = {{Proceedings of the 16th International Symposium on Foundations of Software Engineering}},
+  pages = {308--318},
+  title = {{What Makes a Good Bug Report?}},
+  year = {2008},
 }
 
 @misc{bugayenko2018blog0206,
   author = {Bugayenko, Yegor},
-  title = {{More Bugs, Please}},
   howpublished = {\url{https://www.yegor256.com/180206.html}},
+  month = {feb},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{More Bugs, Please}},
   year = {2018},
-  month = {February},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @misc{bugayenko2018blog0724,
   author = {Bugayenko, Yegor},
-  title = {{Either Bugs or Pull Requests ... or You Are Out}},
   howpublished = {\url{https://www.yegor256.com/180724.html}},
+  month = {jul},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Either Bugs or Pull Requests ... or You Are Out}},
   year = {2018},
-  month = {July},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @inproceedings{herzig2013s,
-  title={{It's Not a Bug, It's a Feature: How Misclassification Impacts Bug Prediction}},
-  author={Herzig, Kim and Just, Sascha and Zeller, Andreas},
-  booktitle={{Proceedings of the 35th International Conference on Software Engineering}},
-  pages={392--401},
-  year={2013},
-  organization={IEEE}
+  author = {Herzig, Kim and Just, Sascha and Zeller, Andreas},
+  booktitle = {{Proceedings of the 35th International Conference on Software Engineering}},
+  organization = {IEEE},
+  pages = {392--401},
+  title = {{It's Not a Bug, It's a Feature: How Misclassification Impacts Bug Prediction}},
+  year = {2013},
 }
 
 @misc{bugayenko2022blog0329,
   author = {Bugayenko, Yegor},
-  title = {{Bugs Occam's Razor}},
   howpublished = {\url{https://www.yegor256.com/220329.html}},
+  month = {mar},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Bugs Occam's Razor}},
   year = {2022},
-  month = {March},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @misc{bugayenko2015blog1222,
   author = {Bugayenko, Yegor},
-  title = {{Why Don't You Contribute to Open Source?}},
   howpublished = {\url{https://www.yegor256.com/151222.html}},
+  month = {dec},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Why Don't You Contribute to Open Source?}},
   year = {2015},
-  month = {December},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @misc{bugayenko2020blog0729,
   author = {Bugayenko, Yegor},
-  title = {{Open Source Etiquette}},
   howpublished = {\url{https://www.yegor256.com/200729.html}},
+  month = {jul},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Open Source Etiquette}},
   year = {2020},
-  month = {July},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @misc{bugayenko2014blog1007,
   author = {Bugayenko, Yegor},
-  title = {{Stop Chatting, Start Coding}},
   howpublished = {\url{https://www.yegor256.com/141007.html}},
+  month = {oct},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Stop Chatting, Start Coding}},
   year = {2014},
-  month = {October},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @misc{bugayenko2016blog0823,
   author = {Bugayenko, Yegor},
-  title = {{Eight Levels of Communication Maturity}},
   howpublished = {\url{https://www.yegor256.com/160823.html}},
+  month = {aug},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Eight Levels of Communication Maturity}},
   year = {2016},
-  month = {August},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @inproceedings{reis2002overview,
-  title={{An Overview of the Software Engineering Process and Tools in the Mozilla Project}},
-  author={Reis, Christian Robottom and de Mattos Fortes, Renata Pontin},
-  booktitle={{Proceedings of the Open Source Software Development Workshop}},
-  volume={8},
-  year={2002}
+  author = {Reis, Christian Robottom and de Mattos Fortes, Renata Pontin},
+  booktitle = {{Proceedings of the Open Source Software Development Workshop}},
+  title = {{An Overview of the Software Engineering Process and Tools in the Mozilla Project}},
+  volume = {8},
+  year = {2002},
 }
 
 @inproceedings{anvik2006should,
-  title={{Who Should Fix This Bug?}},
-  author={Anvik, John and Hiew, Lyndon and Murphy, Gail C.},
-  booktitle={{Proceedings of the 28th International Conference on Software Engineering}},
-  pages={361--370},
-  year={2006}
+  author = {Anvik, John and Hiew, Lyndon and Murphy, Gail C.},
+  booktitle = {{Proceedings of the 28th International Conference on Software Engineering}},
+  pages = {361--370},
+  title = {{Who Should Fix This Bug?}},
+  year = {2006},
 }
 
 @inproceedings{dal2016makes,
-  title={{What Makes a Satisficing Bug Report?}},
-  author={Dal Sasso, Tommaso and Mocci, Andrea and Lanza, Michele},
-  booktitle={{Proceedings of the International Conference on Software Quality, Reliability and Security (QRS)}},
-  pages={164--174},
-  year={2016},
-  organization={IEEE}
+  author = {Dal Sasso, Tommaso and Mocci, Andrea and Lanza, Michele},
+  booktitle = {{Proceedings of the International Conference on Software Quality, Reliability and Security (QRS)}},
+  organization = {IEEE},
+  pages = {164--174},
+  title = {{What Makes a Satisficing Bug Report?}},
+  year = {2016},
 }
 
 @misc{bugayenko2023blog0725,
   author = {Bugayenko, Yegor},
-  title = {{A Disabled Test In Lieu of a Bug Report}},
   howpublished = {\url{https://www.yegor256.com/230725.html}},
+  month = {jul},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{A Disabled Test in Lieu of a Bug Report}},
   year = {2023},
-  month = {July},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @misc{bugayenko2014blog1124,
   author = {Bugayenko, Yegor},
-  title = {{Five Principles of Bug Tracking}},
   howpublished = {\url{https://www.yegor256.com/141124.html}},
+  month = {nov},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Five Principles of Bug Tracking}},
   year = {2014},
-  month = {November},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @misc{bugayenko2018blog0424,
   author = {Bugayenko, Yegor},
-  title = {{The Right Way to Report a Bug}},
   howpublished = {\url{https://www.yegor256.com/180424.html}},
+  month = {apr},
+  note = {[Online; accessed 08-02-2024]},
+  title = {{The Right Way to Report a Bug}},
   year = {2018},
-  month = {April},
-  note = {[Online; accessed 08-02-2024]}
 }
 
 @inproceedings{sadowski2018modern,
-  title={{Modern Code Review: A Case Study at Google}},
-  author={Sadowski, Caitlin and S{\"o}derberg, Emma and Church, Luke and Sipko, Michal and Bacchelli, Alberto},
-  booktitle={{Proceedings of the 40th International Conference on Software Engineering: Software Engineering in Practice}},
-  pages={181--190},
-  year={2018}
+  author = {Sadowski, Caitlin and S{\"o}derberg, Emma and Church, Luke and Sipko, Michal and Bacchelli, Alberto},
+  booktitle = {{Proceedings of the 40th International Conference on Software Engineering: Software Engineering in Practice}},
+  pages = {181--190},
+  title = {{Modern Code Review: A Case Study at Google}},
+  year = {2018},
 }
 
 @inproceedings{bosu2015characteristics,
-  title={{Characteristics of Useful Code Reviews: An Empirical Study at Microsoft}},
-  author={Bosu, Amiangshu and Greiler, Michaela and Bird, Christian},
-  booktitle={{Proceedings of the 12th Working Conference on Mining Software Repositories}},
-  pages={146--156},
-  year={2015},
-  organization={IEEE}
+  author = {Bosu, Amiangshu and Greiler, Michaela and Bird, Christian},
+  booktitle = {{Proceedings of the 12th Working Conference on Mining Software Repositories}},
+  organization = {IEEE},
+  pages = {146--156},
+  title = {{Characteristics of Useful Code Reviews: An Empirical Study at Microsoft}},
+  year = {2015},
 }
 
 @inproceedings{czerwonka2015code,
-  title={{Code Reviews Do Not Find Bugs: How the Current Code Review Best Practice Slows Us Down}},
-  author={Czerwonka, Jacek and Greiler, Michaela and Tilford, Jack},
-  booktitle={{Proceedings of the 37th IEEE International Conference on Software Engineering}},
-  volume={2},
-  pages={27--28},
-  year={2015},
-  organization={IEEE}
+  author = {Czerwonka, Jacek and Greiler, Michaela and Tilford, Jack},
+  booktitle = {{Proceedings of the 37th International Conference on Software Engineering}},
+  organization = {IEEE},
+  pages = {27--28},
+  title = {{Code Reviews Do Not Find Bugs: How the Current Code Review Best Practice Slows Us Down}},
+  volume = {2},
+  year = {2015},
 }
 
 @inproceedings{jiang2013will,
-  title={{Will My Patch Make It? And How Fast? Case Study on the Linux Kernel}},
-  author={Jiang, Yujuan and Adams, Bram and German, Daniel M.},
-  booktitle={{Proceedings of the 10th Working Conference on Mining Software Repositories (MSR)}},
-  pages={101--110},
-  year={2013},
-  organization={IEEE}
+  author = {Jiang, Yujuan and Adams, Bram and German, Daniel M.},
+  booktitle = {{Proceedings of the 10th Working Conference on Mining Software Repositories (MSR)}},
+  organization = {IEEE},
+  pages = {101--110},
+  title = {{Will My Patch Make It? and How Fast? Case Study on the Linux Kernel}},
+  year = {2013},
 }
 
 @article{ackerman1989software,
-  title={{Software Inspections: An Effective Verification Process}},
-  author={Ackerman, A. Frank and Buchwald, Lynne S. and Lewski, Frank H.},
-  journal={{IEEE software}},
-  volume={6},
-  number={3},
-  pages={31--36},
-  year={1989},
-  publisher={IEEE}
+  author = {Ackerman, A. Frank and Buchwald, Lynne S. and Lewski, Frank H.},
+  journal = {{IEEE Software}},
+  number = {3},
+  pages = {31--36},
+  publisher = {IEEE},
+  title = {{Software Inspections: An Effective Verification Process}},
+  volume = {6},
+  year = {1989},
 }
 
 @article{fagan1976design,
-  title={{Design and Code Inspections to Reduce Errors in Program Development}},
-  author={Fagan, Michael},
-  journal={{IBM Systems Journal}},
-  number={3},
-  year={1976},
+  author = {Fagan, Michael},
+  journal = {{IBM Systems Journal}},
+  number = {3},
+  title = {{Design and Code Inspections to Reduce Errors in Program Development}},
+  year = {1976},
 }
 
 @inproceedings{bacchelli2013expectations,
-  title={{Expectations, Outcomes, and Challenges of Modern Code Review}},
-  author={Bacchelli, Alberto and Bird, Christian},
-  booktitle={{Proceedings of the 35th International Conference on Software Engineering}},
-  pages={712--721},
-  year={2013},
-  organization={IEEE}
+  author = {Bacchelli, Alberto and Bird, Christian},
+  booktitle = {{Proceedings of the 35th International Conference on Software Engineering}},
+  organization = {IEEE},
+  pages = {712--721},
+  title = {{Expectations, Outcomes, and Challenges of Modern Code Review}},
+  year = {2013},
 }
 
 @inproceedings{sutherland2009can,
-  title={{Can Peer Code Reviews be Exploited for Later Information Needs?}},
-  author={Sutherland, Andrew and Venolia, Gina},
-  booktitle={{Proceedings of the 31st International Conference on Software Engineering: Companion Volume}},
-  pages={259--262},
-  year={2009},
-  organization={IEEE}
+  author = {Sutherland, Andrew and Venolia, Gina},
+  booktitle = {{Proceedings of the 31st International Conference on Software Engineering: Companion Volume}},
+  organization = {IEEE},
+  pages = {259--262},
+  title = {{Can Peer Code Reviews Be Exploited for Later Information Needs?}},
+  year = {2009},
 }
 
 @article{ortu2020you,
-  title={{How Do You Propose Your Code Changes? Empirical Analysis of Affect Metrics of Pull Requests on GitHub}},
-  author={Ortu, Marco and Destefanis, Giuseppe and Graziotin, Daniel and Marchesi, Michele and Tonelli, Roberto},
-  journal={{IEEE Access}},
-  volume={8},
-  pages={110897--110907},
-  year={2020},
-  publisher={IEEE}
+  author = {Ortu, Marco and Destefanis, Giuseppe and Graziotin, Daniel and Marchesi, Michele and Tonelli, Roberto},
+  journal = {{IEEE Access}},
+  pages = {110897--110907},
+  publisher = {IEEE},
+  title = {{How Do You Propose Your Code Changes? Empirical Analysis of Affect Metrics of Pull Requests on GitHub}},
+  volume = {8},
+  year = {2020},
 }
 
 @inproceedings{freira2018analyzing,
-  title={{Analyzing The Impact Of Feedback In GitHub On The Software Developer’s Mood}},
-  author={Freira, Mateus and Caetano, Josemar and Oliveira, Johnatan and Marques-Neto, Humberto},
-  booktitle={{Proceedings of the International Conference on Software Engineering \& Knowledge Engineering}},
-  year={2018}
+  author = {Freira, Mateus and Caetano, Josemar and Oliveira, Johnatan and Marques-Neto, Humberto},
+  booktitle = {{Proceedings of the International Conference on Software Engineering \& Knowledge Engineering}},
+  title = {{Analyzing the Impact of Feedback in GitHub on the Software Developer's Mood}},
+  year = {2018},
 }
 
 @article{iyer2019effects,
-  title={{Effects of Personality Traits on Pull Request Acceptance}},
-  author={Iyer, Rahul N. and Yun, S. Alex and Nagappan, Meiyappan and Hoey, Jesse},
-  journal={{IEEE Transactions on Software Engineering}},
-  volume={47},
-  number={11},
-  pages={2632--2643},
-  year={2019},
-  publisher={IEEE}
+  author = {Iyer, Rahul N. and Yun, S. Alex and Nagappan, Meiyappan and Hoey, Jesse},
+  journal = {{IEEE Transactions on Software Engineering}},
+  number = {11},
+  pages = {2632--2643},
+  publisher = {IEEE},
+  title = {{Effects of Personality Traits on Pull Request Acceptance}},
+  volume = {47},
+  year = {2019},
 }
 
 @inproceedings{ford2019beyond,
-  title={{Beyond the Code Itself: How Programmers \emph{Really} Look at Pull Requests}},
-  author={Ford, Denae and Behroozi, Mahnaz and Serebrenik, Alexander and Parnin, Chris},
-  booktitle={{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Society}},
-  pages={51--60},
-  year={2019},
-  organization={IEEE}
+  author = {Ford, Denae and Behroozi, Mahnaz and Serebrenik, Alexander and Parnin, Chris},
+  booktitle = {{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Society}},
+  organization = {IEEE},
+  pages = {51--60},
+  title = {{Beyond the Code Itself: How Programmers \emph{Really} Look at Pull Requests}},
+  year = {2019},
 }
 
 @inproceedings{liu2019automatic,
-  title={{Automatic Generation of Pull Request Descriptions}},
-  author={Liu, Zhongxin and Xia, Xin and Treude, Christoph and Lo, David and Li, Shanping},
-  booktitle={{Proceedings of the 34th International Conference on Automated Software Engineering}},
-  pages={176--188},
-  year={2019},
-  organization={IEEE}
+  author = {Liu, Zhongxin and Xia, Xin and Treude, Christoph and Lo, David and Li, Shanping},
+  booktitle = {{Proceedings of the 34th International Conference on Automated Software Engineering}},
+  organization = {IEEE},
+  pages = {176--188},
+  title = {{Automatic Generation of Pull Request Descriptions}},
+  year = {2019},
 }
 
 @misc{bugayenko2022blog0804,
   author = {Bugayenko, Yegor},
-  title = {{The Code and Its Tests in Different Pull Requests}},
   howpublished = {\url{https://www.yegor256.com/220804.html}},
+  month = {aug},
+  note = {[Online; accessed 08-02-2024]},
+  title = {{The Code and Its Tests in Different Pull Requests}},
   year = {2022},
-  month = {August},
-  note = {[Online; accessed 08-02-2024]}
 }
 
 @misc{bugayenko2019blog1203,
   author = {Bugayenko, Yegor},
-  title = {{Does Code Review Involve Testing?}},
   howpublished = {\url{https://www.yegor256.com/191203.html}},
+  month = {dec},
+  note = {[Online; accessed 08-02-2024]},
+  title = {{Does Code Review Involve Testing?}},
   year = {2019},
-  month = {December},
-  note = {[Online; accessed 08-02-2024]}
 }
 
 @misc{bugayenko2015blog0209,
   author = {Bugayenko, Yegor},
-  title = {{Four NOs of a Serious Code Reviewer}},
   howpublished = {\url{https://www.yegor256.com/150209.html}},
+  month = {feb},
+  note = {[Online; accessed 08-02-2024]},
+  title = {{Four NOs of a Serious Code Reviewer}},
   year = {2015},
-  month = {February},
-  note = {[Online; accessed 08-02-2024]}
 }
 
 @misc{bugayenko2015blog0622,
   author = {Bugayenko, Yegor},
-  title = {{A Few Valid Reasons to Reject a Bug Fix}},
   howpublished = {\url{https://www.yegor256.com/150622.html}},
+  month = {jun},
+  note = {[Online; accessed 08-02-2024]},
+  title = {{A Few Valid Reasons to Reject a Bug Fix}},
   year = {2015},
-  month = {June},
-  note = {[Online; accessed 08-02-2024]}
 }
 
 @article{lenarduzzi2021does,
-  title={{Does code quality affect pull request acceptance? An empirical study}},
-  author={Lenarduzzi, Valentina and Nikkola, Vili and Saarim{\"a}ki, Nyyti and Taibi, Davide},
-  journal={{Journal of Systems and Software}},
-  volume={171},
-  pages={110806},
-  year={2021},
-  publisher={Elsevier}
+  author = {Lenarduzzi, Valentina and Nikkola, Vili and Saarim{\"a}ki, Nyyti and Taibi, Davide},
+  journal = {{Journal of Systems and Software}},
+  pages = {110806},
+  publisher = {Elsevier},
+  title = {{Does Code Quality Affect Pull Request Acceptance? an Empirical Study}},
+  volume = {171},
+  year = {2021},
 }
 
 @article{wessel2023github,
-  title={{{\scshape GitHub Actions}: The Impact on the Pull Request Process}},
-  author={Wessel, Mairieli and Vargovich, Joseph and Gerosa, Marco A and Treude, Christoph},
-  journal={{Empirical Software Engineering}},
-  volume={28},
-  number={6},
-  pages={131},
-  year={2023},
-  publisher={Springer}
+  author = {Wessel, Mairieli and Vargovich, Joseph and Gerosa, Marco A. and Treude, Christoph},
+  journal = {{Empirical Software Engineering}},
+  number = {6},
+  pages = {131},
+  publisher = {Springer},
+  title = {{{\scshape GitHub Actions}: The Impact on the Pull Request Process}},
+  volume = {28},
+  year = {2023},
 }
 
 @misc{fowler2006,
   author = {Fowler, Martin},
-  title = {{Continuous Integration}},
   howpublished = {\url{http://martinfowler.com/articles/continuousIntegration.html}},
+  note = {[Online; accessed 07-02-2024]},
+  title = {{Continuous Integration}},
   year = {2006},
-  note = {[Online; accessed 07-02-2024]}
 }
 
 @inproceedings{chidambaram2024rabbit,
-  title={{RABBIT: A tool for identifying bot accounts based on their recent GitHub event history}},
-  author={Chidambaram, Natarajan and Mens, Tom and Decan, Alexandre},
-  booktitle={{Proceedings of the 21st International Conference on Mining Software Repositories}},
-  year={2024},
-  organization={ACM, Lisbon, Portugal},
-  doi={10.1145/3643991.3644877}
+  author = {Chidambaram, Natarajan and Mens, Tom and Decan, Alexandre},
+  booktitle = {{Proceedings of the 21st International Conference on Mining Software Repositories}},
+  doi = {10.1145/3643991.3644877},
+  organization = {ACM},
+  title = {{RABBIT: A Tool for Identifying Bot Accounts Based on Their Recent GitHub Event History}},
+  year = {2024},
 }
 
-
 @inproceedings{rigby2013convergent,
-  title={{Convergent Contemporary Software Peer Review Practices}},
-  author={Rigby, Peter C. and Bird, Christian},
-  booktitle={{Proceedings of the 9th Joint Meeting on Foundations of Software Engineering}},
-  pages={202--212},
-  year={2013}
+  author = {Rigby, Peter C. and Bird, Christian},
+  booktitle = {{Proceedings of the 9th Joint Meeting on Foundations of Software Engineering}},
+  pages = {202--212},
+  title = {{Convergent Contemporary Software Peer Review Practices}},
+  year = {2013},
 }
 
 @article{rigby2012contemporary,
-  title={{Contemporary Peer Review in Action: Lessons from Open Source Development}},
-  author={Rigby, Peter and Cleary, Brendan and Painchaud, Frederic and Storey, Margaret-Anne and German, Daniel},
-  journal={{IEEE Software}},
-  volume={29},
-  number={6},
-  pages={56--61},
-  year={2012},
-  publisher={IEEE}
+  author = {Rigby, Peter and Cleary, Brendan and Painchaud, Frederic and Storey, Margaret-Anne and German, Daniel},
+  journal = {{IEEE Software}},
+  number = {6},
+  pages = {56--61},
+  publisher = {IEEE},
+  title = {{Contemporary Peer Review in Action: Lessons From Open Source Development}},
+  volume = {29},
+  year = {2012},
 }
 
 @inproceedings{yu2015wait,
-  title={{Wait For It: Determinants of Pull Request Evaluation Latency on GitHub}},
-  author={Yu, Yue and Wang, Huaimin and Filkov, Vladimir and Devanbu, Premkumar and Vasilescu, Bogdan},
-  booktitle={{Proceedings of the 12th Working Conference on Mining Software Repositories}},
-  pages={367--371},
-  year={2015},
-  organization={IEEE}
+  author = {Yu, Yue and Wang, Huaimin and Filkov, Vladimir and Devanbu, Premkumar and Vasilescu, Bogdan},
+  booktitle = {{Proceedings of the 12th Working Conference on Mining Software Repositories}},
+  organization = {IEEE},
+  pages = {367--371},
+  title = {{Wait for It: Determinants of Pull Request Evaluation Latency on GitHub}},
+  year = {2015},
 }
+
